# UsefulTools

./: README.md
AWK/: example.awk
MemAndCPUMonitor/: format_data  monitor  说明.txt
Shell/: lock.sh  memoryPSS.sh  quickcmd.sh  xmlRun.sh
Shell/quick_exec_cmd/: cmd.txt  quickcmd.sh  readme.md
Shell/syntax/: loop.sh
WindowsBatch/: compile.bat
WindowsBatch/VLC命令行推流/: run_vlc_push.bat  vlc推流.txt
cmake-model/: CMakeLists.txt  ShellScript
cmake-model/mainPro/: CMakeLists.txt  ReadMe.txt
